# duckstack

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
data/: sample.parquet
scripts/: seed_parquet.py
src/duckstack/: api_client.py  cache.py  catalog.py  config.py  main.py  schemas.py
tests/: test_api.py  test_catalog.py
