[project]
name = "duckstack"
version = "0.1.0"
description = "Unified Data Access Layer powered by DuckDB"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "duckdb>=1.1",
    "pyarrow>=18.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "asyncpg>=0.30",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckstack"]
